src/snapshots/afrotd__parser__tests__rule_html_2.12.8.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.12.8 Neunmetermarkierungen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                30 cm lange Neunmetermarkierungen sollen sich an jeder
                10-Meterlinie 9 m von der Seitenlinie entfernt befinden. Sie
                sind nicht erforderlich, wenn das Spielfeld gemäß Regel 1.2.1.h
                markiert wurde.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.12.8"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
