src/snapshots/afrotd__parser__tests__rule_html_2.16.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.16.1 Kicken des Balles, legale und illegale Kicks
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Kicken ist das absichtliche Stoßen des Balles mit dem Knie,
                dem Schienbein oder dem Fuß.
                </li>
                <li>Ein legaler Kick ist ein Punt, Drop Kick oder Place Kick
                durch einen Team A-Spieler gemäß den Regeln, bevor der Team
                Ballbesitz wechselt. Kicken des Balles in anderer Weise ist
                illegal (A.R. 6.1.2.I).
                </li>
                <li>Jeder Free- oder Scrimmage Kick bleibt solange ein Kick,
                bis er dead wird oder von einem Spieler gefangen oder recovert
                wird.
                </li>
                <li>Im Zweifel wurde ein Ball eher zufällig berührt als
                gekickt.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.16.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
