src/snapshots/afrotd__parser__tests__rule_html_2.16.10.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.16.10 Scrimmage Kick-Formation
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Eine Scrimmage Kick-Formation ist eine Formation, bei der
                sich kein Spieler, außer dem potentiellen Kicker (oder
                Ballhalter), innerhalb des Körperrahmens des Snappers
                aufgestellt hat und kein Spieler sich im freien Weg vom Snapper
                zum potentiellen Kicker (oder Ballhalter) befindet, und
                entweder
                    <ol type="1">
                        <li>wenigstens ein potentieller Kicker sich 10 oder
                        mehr Meter hinter der neutralen Zone befindet oder
                        </li>
                        <li>sich ein potentieller Holder und ein potentieller
                        Kicker sieben oder mehr Meter hinter der neutralen Zone
                        in Position für einen Place Kick befindet. Für 1. oder
                        2. muss es jeweils offensichtlich sein, dass versucht
                        wird, einen Kick auszuführen, damit von einer Scrimmage
                        Kick-Formation ausgegangen werden kann (A.R. 9.1.14.I
                        bis 9.1.14.III)
                        </li>
                    </ol>
                </li>
                <li>Wenn sich Team A beim Snap in einer Scrimmage
                Kick-Formation aufgestellt hat, werden alle Team A-Aktionen
                während dieses Downs als Aktionen aus einer Scrimmage
                Kick-Formation angesehen.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.16.10"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
