src/snapshots/afrotd__parser__tests__rule_html_2.16.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.16.2 Punt
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Punt ist ein Kick durch einen Spieler, der den Ball fallen
                lässt und ihn kickt, bevor dieser den Boden berührt.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.16.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
