src/snapshots/afrotd__parser__tests__rule_html_2.16.6.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.16.6 Kickoff
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Ein Kickoff ist ein Free Kick, mit dem jede Halbzeit startet
                und der jedem Try oder Fieldgoal folgt (Ausnahme: in
                Extraperioden). Es muss ein Place Kick oder ein Drop Kick sein.
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.16.6"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
